--- a/hp/func-base-refactorization/_modules/gstaichi/lang/func.html
+++ b/hp/func-base-refactorization/_modules/gstaichi/lang/func.html
@@ -339,7 +339,6 @@
 <span class="p">)</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.types.enums</span><span class="w"> </span><span class="kn">import</span> <span class="n">AutodiffMode</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">.</span><span class="w"> </span><span class="kn">import</span> <span class="n">kernel_impl</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">._func_base</span><span class="w"> </span><span class="kn">import</span> <span class="n">FuncBase</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">.kernel</span><span class="w"> </span><span class="kn">import</span> <span class="n">Kernel</span>
 
@@ -356,7 +355,13 @@
 
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">_func</span><span class="p">:</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">_classfunc</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">_pyfunc</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">is_real_function</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">func</span><span class="o">=</span><span class="n">_func</span><span class="p">,</span> <span class="n">is_classfunc</span><span class="o">=</span><span class="n">_classfunc</span><span class="p">,</span> <span class="n">is_kernel</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">is_classkernel</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span>
+            <span class="n">func</span><span class="o">=</span><span class="n">_func</span><span class="p">,</span>
+            <span class="n">is_classfunc</span><span class="o">=</span><span class="n">_classfunc</span><span class="p">,</span>
+            <span class="n">is_kernel</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+            <span class="n">is_classkernel</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+            <span class="n">is_real_function</span><span class="o">=</span><span class="n">is_real_function</span><span class="p">,</span>
+        <span class="p">)</span>
 <div class="viewcode-block" id="Func.func_id">
 <a class="viewcode-back" href="../../../autoapi/gstaichi/lang/func/index.html#gstaichi.lang.func.Func.func_id">[docs]</a>
         <span class="bp">self</span><span class="o">.</span><span class="n">func_id</span> <span class="o">=</span> <span class="n">Func</span><span class="o">.</span><span class="n">function_counter</span></div>
@@ -394,7 +399,7 @@
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__call__</span><span class="p">(</span><span class="bp">self</span><span class="p">:</span> <span class="s2">&quot;Func&quot;</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Any</span><span class="p">:</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span> <span class="o">=</span> <span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">current_kernel</span> <span class="k">if</span> <span class="n">impl</span><span class="o">.</span><span class="n">inside_kernel</span><span class="p">()</span> <span class="k">else</span> <span class="kc">None</span>
-        <span class="n">args</span> <span class="o">=</span> <span class="n">kernel_impl</span><span class="o">.</span><span class="n">process_args</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">is_func</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">is_pyfunc</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">pyfunc</span><span class="p">,</span> <span class="n">args</span><span class="o">=</span><span class="n">args</span><span class="p">,</span> <span class="n">kwargs</span><span class="o">=</span><span class="n">kwargs</span><span class="p">)</span>
+        <span class="n">args</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">process_args</span><span class="p">(</span><span class="n">is_func</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">is_pyfunc</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">pyfunc</span><span class="p">,</span> <span class="n">args</span><span class="o">=</span><span class="n">args</span><span class="p">,</span> <span class="n">kwargs</span><span class="o">=</span><span class="n">kwargs</span><span class="p">)</span>
 
         <span class="k">if</span> <span class="ow">not</span> <span class="n">impl</span><span class="o">.</span><span class="n">inside_kernel</span><span class="p">():</span>
             <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">pyfunc</span><span class="p">:</span>
@@ -418,8 +423,7 @@
         <span class="n">used_by_dataclass_parameters_enforcing</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span><span class="o">.</span><span class="n">used_py_dataclass_leaves_by_key_enforcing</span><span class="o">.</span><span class="n">get</span><span class="p">(</span>
             <span class="n">current_args_key</span>
         <span class="p">)</span>
-        <span class="n">tree</span><span class="p">,</span> <span class="n">ctx</span> <span class="o">=</span> <span class="n">kernel_impl</span><span class="o">.</span><span class="n">get_tree_and_ctx</span><span class="p">(</span>
-            <span class="bp">self</span><span class="p">,</span>
+        <span class="n">tree</span><span class="p">,</span> <span class="n">ctx</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_tree_and_ctx</span><span class="p">(</span>
             <span class="n">is_kernel</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
             <span class="n">args</span><span class="o">=</span><span class="n">args</span><span class="p">,</span>
             <span class="n">ast_builder</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">current_kernel</span><span class="o">.</span><span class="n">ast_builder</span><span class="p">(),</span>
@@ -494,8 +498,7 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        only for real func</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">tree</span><span class="p">,</span> <span class="n">ctx</span> <span class="o">=</span> <span class="n">kernel_impl</span><span class="o">.</span><span class="n">get_tree_and_ctx</span><span class="p">(</span>
-            <span class="bp">self</span><span class="p">,</span>
+        <span class="n">tree</span><span class="p">,</span> <span class="n">ctx</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">get_tree_and_ctx</span><span class="p">(</span>
             <span class="n">is_kernel</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
             <span class="n">args</span><span class="o">=</span><span class="n">args</span><span class="p">,</span>
             <span class="n">arg_features</span><span class="o">=</span><span class="n">arg_features</span><span class="p">,</span>
