deploy: 7a254208c9ea4124da7413ffb0e2d806ddcb4161

--- a/genindex.html
+++ b/genindex.html
@@ -388,10 +388,10 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.append">append() (in module gstaichi.lang.snode)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/simt/block/index.html#gstaichi.lang.simt.block.arch_uses_spv">arch_uses_spv() (in module gstaichi.lang.simt.block)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/matrix_ops_utils/index.html#gstaichi.lang.matrix_ops_utils.arg_at">arg_at() (in module gstaichi.lang.matrix_ops_utils)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.arg_features">arg_features (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
@@ -425,6 +425,8 @@
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.ast_builder">ast_builder (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.ast_builder">ast_builder() (gstaichi.lang.kernel.Kernel method)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator">ASTGenerator (class in gstaichi.lang.kernel)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/symbol_resolver/index.html#gstaichi.lang.ast.symbol_resolver.ASTResolver">ASTResolver (class in gstaichi.lang.ast.symbol_resolver)</a>
 </li>
@@ -680,10 +682,10 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.compiled_kernel_data_by_key">compiled_kernel_data_by_key (gstaichi.lang.kernel.Kernel attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.CompiledKernelKeyType">CompiledKernelKeyType (in module gstaichi.lang.kernel)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/linalg/sparse_solver/index.html#gstaichi.linalg.sparse_solver.SparseSolver.compute">compute() (gstaichi.linalg.sparse_solver.SparseSolver method)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.construct_kernel_ret">construct_kernel_ret() (gstaichi.lang.kernel.Kernel method)</a>
@@ -714,12 +716,18 @@
         <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.cross">(in module gstaichi.math.mathimpl)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.ctx">ctx (gstaichi.lang.kernel.ASTGenerator attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.cuda">cuda (in module gstaichi.lang.misc)</a>
 </li>
       <li><a href="autoapi/gstaichi/profiler/kernel_metrics/index.html#gstaichi.profiler.kernel_metrics.CuptiMetric">CuptiMetric (class in gstaichi.profiler.kernel_metrics)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/func/index.html#gstaichi.lang.func.Func.current_kernel">current_kernel (gstaichi.lang.func.Func attribute)</a>
+
+      <ul>
+        <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.current_kernel">(gstaichi.lang.kernel.ASTGenerator attribute)</a>
 </li>
+      </ul></li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.current_loop_scope">current_loop_scope() (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext method)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/checkers/index.html#gstaichi.lang.ast.checkers.KernelSimplicityASTChecker.current_scope">current_scope (gstaichi.lang.ast.checkers.KernelSimplicityASTChecker property)</a>
@@ -780,10 +788,10 @@
         <li><a href="autoapi/gstaichi/lang/matrix_ops/index.html#gstaichi.lang.matrix_ops.diag">(in module gstaichi.lang.matrix_ops)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/matrix_ops_utils/index.html#gstaichi.lang.matrix_ops_utils.dim_lt">dim_lt() (in module gstaichi.lang.matrix_ops_utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.distance">distance() (in module gstaichi.math.mathimpl)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/matrix_ops_utils/index.html#gstaichi.lang.matrix_ops_utils.do_check">do_check() (in module gstaichi.lang.matrix_ops_utils)</a>
@@ -826,6 +834,8 @@
         <li><a href="autoapi/gstaichi/lang/struct/index.html#gstaichi.lang.struct.StructField.dual">(gstaichi.lang.struct.StructField attribute)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.dump_ast">dump_ast (gstaichi.lang.kernel.ASTGenerator attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.dump_compile_config">dump_compile_config() (in module gstaichi.lang.misc)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.SNode.dynamic">dynamic() (gstaichi.lang.snode.SNode method)</a>
@@ -1775,6 +1785,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.kernel_function_info">kernel_function_info (gstaichi.lang.kernel.Kernel attribute)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.kernel_name">kernel_name (gstaichi.lang.kernel.ASTGenerator attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/ast/checkers/index.html#gstaichi.lang.ast.checkers.KernelSimplicityASTChecker">KernelSimplicityASTChecker (class in gstaichi.lang.ast.checkers)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/checkers/index.html#gstaichi.lang.ast.checkers.KernelSimplicityASTChecker.ScopeGuard">KernelSimplicityASTChecker.ScopeGuard (class in gstaichi.lang.ast.checkers)</a>
@@ -2222,10 +2234,14 @@
         <li><a href="autoapi/gstaichi/lang/impl/index.html#gstaichi.lang.impl.one">(in module gstaichi.lang.impl)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.only_parse_function_def">only_parse_function_def (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+
+      <ul>
+        <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.only_parse_function_def">(gstaichi.lang.kernel.ASTGenerator attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.only_parse_function_def">only_parse_function_def (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
-</li>
       <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.Matrix.outer_product">outer_product() (gstaichi.lang.matrix.Matrix method)</a>
 
       <ul>
@@ -2360,10 +2376,10 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/mesh/index.html#gstaichi.lang.mesh.MeshInstance.relation_set">relation_set (gstaichi.lang.mesh.MeshInstance attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.rescale_index">rescale_index() (in module gstaichi.lang.snode)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.reset">reset() (gstaichi.lang.kernel.Kernel method)</a>
 
       <ul>
@@ -2405,6 +2421,8 @@
 </li>
       </ul></li>
       <li><a href="autoapi/gstaichi/lang/ops/index.html#gstaichi.lang.ops.rsqrt">rsqrt() (in module gstaichi.lang.ops)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.runtime">runtime (gstaichi.lang.kernel.ASTGenerator attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -2726,6 +2744,8 @@
         <li><a href="autoapi/gstaichi/lang/matrix_ops/index.html#gstaichi.lang.matrix_ops.transpose">(in module gstaichi.lang.matrix_ops)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.tree">tree (gstaichi.lang.kernel.ASTGenerator attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/tools/np2ply/index.html#gstaichi.tools.np2ply.PLYWriter.type_map">type_map (gstaichi.tools.np2ply.PLYWriter attribute)</a>
 </li>
   </ul></td>
@@ -2765,6 +2785,8 @@
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.used_py_dataclass_leaves_by_key_enforcing">used_py_dataclass_leaves_by_key_enforcing (gstaichi.lang.kernel.Kernel attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.used_py_dataclass_leaves_by_key_enforcing_dotted">used_py_dataclass_leaves_by_key_enforcing_dotted (gstaichi.lang.kernel.Kernel attribute)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.ASTGenerator.used_py_dataclass_parameters">used_py_dataclass_parameters (gstaichi.lang.kernel.ASTGenerator attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.used_py_dataclass_parameters_collecting">used_py_dataclass_parameters_collecting (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
