deploy: aa1dcbf97fce43ac2696f7712cbac13aac8b44f1

--- a/genindex.html
+++ b/genindex.html
@@ -636,6 +636,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/ast/checkers/index.html#gstaichi.lang.ast.checkers.KernelSimplicityASTChecker.ScopeGuard.c">c (gstaichi.lang.ast.checkers.KernelSimplicityASTChecker.ScopeGuard attribute)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.LaunchContextBufferCache.cache">cache() (gstaichi.lang.kernel.LaunchContextBufferCache method)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.cache_read_only">cache_read_only() (in module gstaichi.lang.misc)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformers/call_transformer/index.html#gstaichi.lang.ast.ast_transformers.call_transformer.CallTransformer">CallTransformer (class in gstaichi.lang.ast.ast_transformers.call_transformer)</a>
@@ -682,10 +684,10 @@
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.compiled_kernel_data_by_key">compiled_kernel_data_by_key (gstaichi.lang.kernel.Kernel attribute)</a>
 </li>
-      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.CompiledKernelKeyType">CompiledKernelKeyType (in module gstaichi.lang.kernel)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.CompiledKernelKeyType">CompiledKernelKeyType (in module gstaichi.lang.kernel)</a>
+</li>
       <li><a href="autoapi/gstaichi/linalg/sparse_solver/index.html#gstaichi.linalg.sparse_solver.SparseSolver.compute">compute() (gstaichi.linalg.sparse_solver.SparseSolver method)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.construct_kernel_ret">construct_kernel_ret() (gstaichi.lang.kernel.Kernel method)</a>
@@ -1807,7 +1809,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.l">l (in module gstaichi.lang.misc)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.launch_context_buffer_cache">launch_context_buffer_cache (gstaichi.lang.kernel.Kernel attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.Kernel.launch_kernel">launch_kernel() (gstaichi.lang.kernel.Kernel method)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.LaunchContextBufferCache">LaunchContextBufferCache (class in gstaichi.lang.kernel)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.MatrixNdarray.layout">layout (gstaichi.lang.matrix.MatrixNdarray attribute)</a>
 
@@ -1835,10 +1841,10 @@
         <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.length">(in module gstaichi.math.mathimpl)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/gstaichi/linalg/matrixfree_cg/index.html#gstaichi.linalg.matrixfree_cg.LinearOperator">LinearOperator (class in gstaichi.linalg.matrixfree_cg)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/gstaichi/linalg/matrixfree_cg/index.html#gstaichi.linalg.matrixfree_cg.LinearOperator">LinearOperator (class in gstaichi.linalg.matrixfree_cg)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.lineno_offset">lineno_offset (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/mesh/index.html#gstaichi.lang.mesh.Mesh.load_meta">load_meta() (gstaichi.lang.mesh.Mesh static method)</a>
@@ -2276,6 +2282,8 @@
 </li>
       <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.popcnt">popcnt() (in module gstaichi.math.mathimpl)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/kernel/index.html#gstaichi.lang.kernel.LaunchContextBufferCache.populate_launch_ctx_from_cache">populate_launch_ctx_from_cache() (gstaichi.lang.kernel.LaunchContextBufferCache method)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/ops/index.html#gstaichi.lang.ops.pow">pow() (in module gstaichi.lang.ops)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/matrix_ops_utils/index.html#gstaichi.lang.matrix_ops_utils.preconditions">preconditions() (in module gstaichi.lang.matrix_ops_utils)</a>
@@ -2284,10 +2292,10 @@
 </li>
       <li><a href="autoapi/gstaichi/profiler/kernel_profiler/index.html#gstaichi.profiler.kernel_profiler.print_kernel_profiler_info">print_kernel_profiler_info() (in module gstaichi.profiler.kernel_profiler)</a>
 </li>
-      <li><a href="autoapi/gstaichi/profiler/memory_profiler/index.html#gstaichi.profiler.memory_profiler.print_memory_profiler_info">print_memory_profiler_info() (in module gstaichi.profiler.memory_profiler)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/gstaichi/profiler/memory_profiler/index.html#gstaichi.profiler.memory_profiler.print_memory_profiler_info">print_memory_profiler_info() (in module gstaichi.profiler.memory_profiler)</a>
+</li>
       <li><a href="autoapi/gstaichi/profiler/scoped_profiler/index.html#gstaichi.profiler.scoped_profiler.print_scoped_profiler_info">print_scoped_profiler_info() (in module gstaichi.profiler.scoped_profiler)</a>
 </li>
       <li><a href="autoapi/gstaichi/linalg/sparse_matrix/index.html#gstaichi.linalg.sparse_matrix.SparseMatrixBuilder.print_triplets">print_triplets() (gstaichi.linalg.sparse_matrix.SparseMatrixBuilder method)</a>
