--- a/_modules/gstaichi/lang/impl.html
+++ b/_modules/gstaichi/lang/impl.html
@@ -831,10 +831,10 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_check_gradient_field_not_placed</span><span class="p">(</span><span class="s2">&quot;dual&quot;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_check_matrix_field_member_shape</span><span class="p">()</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_calc_matrix_field_dynamic_index_stride</span><span class="p">()</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">global_vars</span> <span class="o">=</span> <span class="p">[]</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">grad_vars</span> <span class="o">=</span> <span class="p">[]</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">dual_vars</span> <span class="o">=</span> <span class="p">[]</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">matrix_fields</span> <span class="o">=</span> <span class="p">[]</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">global_vars</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">grad_vars</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">dual_vars</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">matrix_fields</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
 
     <span class="k">def</span><span class="w"> </span><span class="nf">_register_signal_handlers</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_signal_handler_registry</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
